--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,22 +1,21 @@
 ---
 name: Checks
 
-#this is the trigger
-#this piece of code is for github actions => when we push sth to github it pushes that data automatically to the container we made in dockerhub  
 on: [push]
+
 jobs:
   test-list:
-    - name: Test and Lint     
+      name: Test and Lint     
       runs-on: ubuntu-22.04
       steps:
-        - name: Checkout code
-          uses: docker/login-action@1
+        - name: Login to docker hub
+          uses: docker/login-action@v3
           with:
-              name: ${{secret.DOCKERHUB_USER}}      
-              password: ${{secret.DOCKERHUB_TOKEN}} 
+              username: ${{secrets.DOCKERHUB_USER}}      
+              password: ${{secrets.DOCKERHUB_TOKEN}} 
         - name: Checkout
-          uses: actions/checkout@v2
+          uses: actions/checkout@v3
         - name: Test
-          run: docker-compose run --rm app sh -c "python manage.py test"
+          run: docker-compose exec recipe-app-api-app sh -c "python manage.py test"
         - name: Lint
-          run: docker-compose run --rm sh -c "flake8" 
+          run: docker-compose run --rm recipe-app-api-app sh -c "flake8" 
